--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
         <div class="filters">
           <a class="filter active" data-filter="all">All</a>
-          <a href="/index1.html" class="filter" data-filter="modern">Modern</a>
-          <a href="/index2.html" class="filter" data-filter="farmhouse">Farmhouse</a>
-          <a href="/index3.html" class="filter" data-filter="compact">Compact</a>
+          <a href="index1.html" class="filter" data-filter="modern">Modern</a>
+          <a href="index2.html" class="filter" data-filter="farmhouse">Farmhouse</a>
+          <a href="index3.html" class="filter" data-filter="compact">Compact</a>
         </div>
 
         <div class="grid" id="plansGrid">
