--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="#hero">Home</a></li>
-            <li><a href="#about">Vision & Mission</a></li>
-            <li><a href="#gallery">Services</a></li>
-            <li><a href="#contact">Projects</a></li>
+            <li><a href="#about">Plan</a></li>
+            <li><a href="#gallery">about</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
         </div>
 
