--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <main>
     <!-- HERO -->
-    <section id="hero" class="hero">
+    <section id="hero" class="hero"> 
       <div class="hero-inner">
         <h1>Elegant Home Designs<br><span>Crafted for Modern Living</span></h1>
         <p class="lead">Timeless architecture. Bespoke floor plans. Luxurious finishes designed to elevate everyday living.</p>
@@ -59,8 +59,8 @@
         <div class="filters">
           <a class="filter active" data-filter="all">All</a>
           <a href="index1.html" class="filter" data-filter="modern">Modern</a>
-          <a href="index2.html" class="filter" data-filter="farmhouse">Farmhouse</a>
-          <a href="index3.html" class="filter" data-filter="compact">Compact</a>
+          <a href="/index2.html" class="filter" data-filter="farmhouse">Farmhouse</a>
+          <a href="/index3.html" class="filter" data-filter="compact">Compact</a>
         </div>
 
         <div class="grid" id="plansGrid">
@@ -141,7 +141,7 @@
           <a class="btn btn-primary" href="https://wa.me/911234567890" target="_blank" rel="noopener">Chat on WhatsApp</a>
         </div>
 
-        <form id="contactForm" class="contact-form" action="https://formspree.io/f/xnngorgw" method="POST" novalidate>
+        <form id="contactForm" class="contact-form" action="https://script.google.com/macros/s/AKfycby4qzxX0TlBjWBuYj6vlyHGWTVlHjnDVXoJZI55VEMiCbqAAIOMGR_y4uRTsx_WzBs/exec" method="POST" novalidate>
           <label><span>Your name</span><input type="text" name="name" id="name" required></label>
           <label><span>Email</span><input type="email" name="email" id="email" required></label>
           <label><span>Project details</span><textarea name="message" id="message" rows="5" required></textarea></label>
@@ -160,7 +160,7 @@
       <div class="footer-top">
         <div class="footer-logo">
           <img src="img/gravity consultancy logo.png" alt="Gravity Consultancy logo">
-          <p>Designing dreams into reality with precision, elegance, and trust.</p>
+          <p>Designs That Speak.</p>
         </div>
 
         <div class="footer-links">
@@ -168,8 +168,8 @@
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">Plan</a></li>
-            <li><a href="#gallery">about</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#gallery">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
@@ -187,8 +187,8 @@
 
         <div class="footer-contact">
           <h3>Contact</h3>
-          <p><strong>Phone:</strong> +91 9775162901</p>
-          <p><strong>Address:</strong><br>Amar - Ahmadpur Road, Bolpur, West Bengal 731204, India</p>
+          <p><strong>Phone:</strong> +91 9932253566</p>
+          <p><strong>Address:</strong><br>Makarampur, Bolpur, West Bengal 731204, India</p>
           <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
