--- a/index3.html
+++ b/index3.html
@@ -23,10 +23,10 @@
   </div>
 
   <nav class="nav" id="nav">
-    <a href="#hero">Home</a>
-    <a href="#gallery">Plans</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a href="/index.html#home">Home</a>
+    <a href="/index.html#gallery">Plans</a>
+    <a href="/index.html#about">About</a>
+    <a href="/index.html#contact">Contact</a>
   </nav>
 
   <button id="menuBtn" class="menu-btn" aria-label="menu">
@@ -68,16 +68,16 @@
       <div class="footer-top">
         <div class="footer-logo">
           <img src="img/gravity consultancy logo.png" alt="Gravity Consultancy logo">
-          <p>Designing dreams into reality with precision, elegance, and trust.</p>
+          <p>Designs That Speak.</p>
         </div>
 
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">Vision & Mission</a></li>
-            <li><a href="#gallery">Services</a></li>
-            <li><a href="#contact">Projects</a></li>
+            <li><a href="/index.html#hero">Home</a></li>
+            <li><a href="/index.html#about">About</a></li>
+            <li><a href="/index.html#gallery">Plans</a></li>
+            <li><a href="/index.html#contact">Contact</a></li>
           </ul>
         </div>
 
@@ -95,8 +95,8 @@
 
         <div class="footer-contact">
           <h3>Contact</h3>
-          <p><strong>Phone:</strong> +91 9775162901</p>
-          <p><strong>Address:</strong><br>Amar - Ahmadpur Road, Bolpur, West Bengal 731204, India</p>
+          <p><strong>Phone:</strong> +91 9932253566</p>
+          <p><strong>Address:</strong><br>Makarampur, Bolpur, West Bengal 731204, India</p>
           <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
