--- a/index.html
+++ b/index.html
@@ -58,19 +58,22 @@
 
         <div class="filters">
           <a class="filter active" data-filter="all">All</a>
-          <a href="index1.html" class="filter" data-filter="modern">Modern</a>
-          <a href="index2.html" class="filter" data-filter="farmhouse">Farmhouse</a>
-          <a href="index3.html" class="filter" data-filter="compact">Compact</a>
+          <a href="index1.html" class="filter" data-filter="compact">Consultancy Plan</a>
+          <a href="index2.html" class="filter" data-filter="compact">Construction Plan</a>
+          <a href="index3.html" class="filter" data-filter="modern">Residential Plan</a>
+          <a href="index4.html" class="filter" data-filter="farmhouse">Commercial Plan</a>
+          <a href="index5.html" class="filter" data-filter="compact">Resort Plan</a>
+          <a href="index6.html" class="filter" data-filter="compact">Educational Plan</a>
         </div>
 
         <div class="grid" id="plansGrid">
           <article class="card" data-type="modern">
             <div class="card-media">
-              <img src="img/img1.jpg" alt="The Aurora plan">
+              <img src="img/img1.jpg" alt="Consultancy Plan">
               <div class="card-badge">3200 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>The Aurora</h3>
+              <h3>Consultancy Plan</h3>
               <p>Open-plan living, double-height foyer, integrated terrace and pool-ready layout.</p>
               <a class="card-more" href="index1.html">View</a>
             </div>
@@ -78,11 +81,11 @@
 
           <article class="card" data-type="farmhouse">
             <div class="card-media">
-              <img src="img/img2.jpg" alt="Willow Cottage plan">
+              <img src="img/img2.jpg" alt="Costraction Plan">
               <div class="card-badge">2100 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Willow Cottage</h3>
+              <h3>Construction Plan</h3>
               <p>Cozy family layout with broad verandas and warm, rustic finishes.</p>
               <a class="card-more" href="index2.html">View</a>
             </div>
@@ -90,11 +93,35 @@
 
           <article class="card" data-type="compact">
             <div class="card-media">
-              <img src="img/img3.jpg" alt="Urban Nest plan">
+              <img src="img/img3.jpg" alt="Residential Plan">
               <div class="card-badge">1200 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Urban Nest</h3>
+              <h3>Residential Plan</h3>
+              <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
+              <a class="card-more" href="index3.html">View</a>
+            </div>
+          </article>
+
+          <article class="card" data-type="modern">S
+            <div class="card-media">
+              <img src="img/img4.jpg" alt="ommercial Plan">
+              <div class="card-badge">4500 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Commercial Plan</h3>
+              <p>Luxurious multi-level villa with rooftop terrace and panoramic glazing.</p>
+              <a class="card-more" href="index4.html">View</a>
+            </div>
+          </article>
+
+          <article class="card" data-type="compact">
+            <div class="card-media">
+              <img src="img/img3.jpg" alt="Resort Plan">
+              <div class="card-badge">1200 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Resort Plan</h3>
               <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
               <a class="card-more" href="index3.html">View</a>
             </div>
@@ -102,11 +129,11 @@
 
           <article class="card" data-type="modern">
             <div class="card-media">
-              <img src="img/img4.jpg" alt="Skyline Villa plan">
+              <img src="img/img4.jpg" alt="Educational Plan">
               <div class="card-badge">4500 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Skyline Villa</h3>
+              <h3>Educational Plan</h3>
               <p>Luxurious multi-level villa with rooftop terrace and panoramic glazing.</p>
               <a class="card-more" href="index4.html">View</a>
             </div>
