--- a/index1.html
+++ b/index1.html
@@ -38,30 +38,58 @@
     <section class="section">
       <div class="container">
         <a class="btn btn-ghost" href="index.html#gallery">← Back to plans</a>
+        <p class="section-sub">A curated selection of signature plans — click any card to view details and larger images.</p>
+        <div class="grid" id="plansGrid">
+          <article class="card" data-type="modern">
+            <div class="card-media">
+              <img src="img/img1.jpg" alt="Building Plan">
+              <div class="card-badge">3200 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Building Plan</h3>
+              <p>Open-plan living, double-height foyer, integrated terrace and pool-ready layout.</p>
+              <a class="card-more" href="index7.html">View</a>
+            </div>
+          </article>
 
-    <div class="modal-dialog" style="margin-top:18px;">
-      <div class="modal-grid" style="grid-template-columns:1fr 420px;">
-        <div class="modal-media">
-          <img src="img/img1.jpg" alt="The Aurora — main image">
-        </div>
-        <div class="modal-content">
-          <h3>The Aurora</h3>
-          <div class="meta">3200 sq ft • 4 Bed / 3 Bath</div>
-          <p>Open-plan living with a dramatic double-height foyer. The Aurora features a generous kitchen island, integrated terrace access, 
-            formal and informal living zones, and a pool-ready site layout. 
-            Thoughtful daylighting and cross-ventilation are prioritized in this design.</p>
-          <div class="price">Estimated starting price: ₹1,85,00,000</div>
-          <div style="margin-top:18px;">
-            <a href="index.html#contact" class="btn btn-primary">Request Quote</a>
-            <a href="img/img1.jpg" class="btn btn-ghost" download>Download Plan (PDF)</a>
-          </div>
+          <article class="card" data-type="farmhouse">
+            <div class="card-media">
+              <img src="img/img2.jpg" alt="Project Estimates">
+              <div class="card-badge">2100 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Project Estimates</h3>
+              <p>Cozy family layout with broad verandas and warm, rustic finishes.</p>
+              <a class="card-more" href="index8.html">View</a>
+            </div>
+          </article>
+
+          <article class="card" data-type="compact">
+            <div class="card-media">
+              <img src="img/img3.jpg" alt="3D Perspective View">
+              <div class="card-badge">1200 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>3D Perspective View</h3>
+              <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
+              <a class="card-more" href="index9.html">View</a>
+            </div>
+          </article>
+
+          <article class="card" data-type="modern">
+            <div class="card-media">
+              <img src="img/img4.jpg" alt="Structual Drawing">
+              <div class="card-badge">4500 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Structual Drawing</h3>
+              <p>Luxurious multi-level villa with rooftop terrace and panoramic glazing.</p>
+              <a class="card-more" href="index10.html">View</a>
+            </div>
+          </article>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-
+    </section>
   </main>
 
 <!-- ✅ FIXED FOOTER -->
