Modify quote button text and remove price display
Updated the button text for requesting a quote and removed the estimated price.

--- a/index3.html
+++ b/index3.html
@@ -48,10 +48,8 @@
           <h3>Urban Nest</h3>
           <div class="meta">3200 sq ft • 4 Bed / 3 Bath</div>
           <p>Open-plan living with a dramatic double-height foyer. Urban Nest features a generous kitchen island, integrated terrace access, formal and informal living zones, and a pool-ready site layout. Thoughtful daylighting and cross-ventilation are prioritized in this design.</p>
-          <div class="price">Estimated starting price: ₹1,85,00,000</div>
           <div style="margin-top:18px;">
-            <a href="index.html#contact" class="btn btn-primary">Request Quote</a>
-            <a href="img/img3.jpg" class="btn btn-ghost" download>Download Plan (PDF)</a>
+            <a href="index.html#contact" class="btn btn-primary">Request Quotetion</a>
           </div>
         </div>
       </div>
