--- a/index12.html
+++ b/index12.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Skyline Villa — Gravity Consultancy</title>
   <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
   <video class="bg-video" autoplay muted loop playsinline>
@@ -37,7 +39,7 @@
   <main>
     <section class="section">
       <div class="container">
-        <a class="btn btn-ghost" href="index2.html">← Back to plans</a>
+        <a class="btn btn-ghost" href="index13.html">← Back to plans</a>
 
     <div class="modal-dialog" style="margin-top:18px;">
       <div class="modal-grid" style="grid-template-columns:1fr 420px;">
@@ -57,8 +59,59 @@
   </div>
 </section>
 
+<!-- ==========================
+       GALLERY SECTION
+========================== -->
+<section id="gallery" class="plans-gallery">
+  <div class="gallery-container">
 
-  </main>
+    <h2 class="gallery-title">Explore Our Latest Plans</h2>
+    <p class="gallery-subtitle">Premium home designs crafted for modern living</p>
+
+    <div class="gallery-grid">
+
+      <!-- CARD 1 -->
+      <a href="plan-skyline.html" class="gallery-card">
+        <img src="img/img4.jpg" alt="Skyline Villa">
+        <div class="gallery-info">
+          <h3>Skyline Villa</h3>
+          <p>3200 sq ft • 4 Bed / 3 Bath</p>
+        </div>
+      </a>
+
+      <!-- CARD 2 -->
+      <a href="#" class="gallery-card">
+        <img src="img/img2.jpg" alt="Urban Luxury House">
+        <div class="gallery-info">
+          <h3>Urban Luxury House</h3>
+          <p>2800 sq ft • 3 Bed / 3 Bath</p>
+        </div>
+      </a>
+
+      <!-- CARD 3 -->
+      <a href="#" class="gallery-card">
+        <img src="img/img3.jpg" alt="Modern Heritage Villa">
+        <div class="gallery-info">
+          <h3>Modern Heritage Villa</h3>
+          <p>3500 sq ft • 5 Bed / 4 Bath</p>
+        </div>
+      </a>
+
+      <!-- CARD 4 -->
+      <a href="#" class="gallery-card">
+        <img src="img/img1.jpg" alt="Contemporary Elite House">
+        <div class="gallery-info">
+          <h3>Contemporary Elite House</h3>
+          <p>2900 sq ft • 4 Bed / 4 Bath</p>
+        </div>
+      </a>
+
+    </div>
+  </div>
+</section>
+
+
+</main>
 <!-- ✅ FIXED FOOTER -->
   <footer class="site-footer">
     <div class="footer-container">
@@ -97,7 +150,6 @@
           <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-google"></i></a>
           </div>
         </div>
