--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
   <video class="bg-video" autoplay muted loop playsinline>
@@ -38,17 +40,45 @@
 
   <main>
     <!-- HERO -->
-    <section id="hero" class="hero"> 
-      <div class="hero-inner">
-        <h1>Elegant Home Designs<br><span>Crafted for Modern Living</span></h1>
-        <p class="lead">Timeless architecture. Bespoke floor plans. Luxurious finishes designed to elevate everyday living.</p>
-        <div class="hero-cta">
-          <a href="#gallery" class="btn btn-primary">Explore Site Plans</a>
-          <a href="#contact" class="btn btn-ghost">Request Consultation</a>
-        </div>
+<section id="hero" class="hero new-hero">
+  <div class="hero-wrapper">
+
+    <!-- LEFT Side Content -->
+    <div class="hero-left">
+      <h1>Elegant Home Designs</h1>
+      <h2>Crafted for Modern Living</h2>
+      <p class="lead">
+        Timeless architecture. Bespoke floor plans. Luxurious finishes designed to elevate everyday living.
+      </p>
+
+      <div class="hero-cta">
+        <a href="#gallery" class="btn btn-primary">Explore Site Plans</a>
+        <a href="#contact" class="btn btn-ghost">Request Consultation</a>
       </div>
-      <div class="hero-accent"></div>
-    </section>
+    </div>
+
+<!-- RIGHT Side Slider -->
+<div class="hero-right">
+  <div class="hero-slider">
+
+    <!-- New Plan Badge -->
+    <span class="new-badge">NEW PLAN</span>
+
+    <!-- Slides -->
+    <img src="img/img3.jpg" class="slide active">
+    <img src="img/img4.jpg" class="slide">
+    <img src="img/img5.jpg" class="slide">
+
+    <!-- Arrows -->
+    <div class="slider-arrow left" id="arrowLeft">&#10094;</div>
+    <div class="slider-arrow right" id="arrowRight">&#10095;</div>
+
+  </div>
+</div>
+
+
+  </div>
+</section>
 
     <!-- GALLERY -->
     <section id="gallery" class="section gallery-section">
@@ -58,58 +88,33 @@
 
         <div class="filters">
           <a class="filter active" data-filter="all">All</a>
-          <a href="index1.html" class="filter" data-filter="compact">Consultancy Plan</a>
-          <a href="index2.html" class="filter" data-filter="compact">Construction Plan</a>
-          <a href="index3.html" class="filter" data-filter="modern">Residential Plan</a>
-          <a href="index4.html" class="filter" data-filter="farmhouse">Commercial Plan</a>
-          <a href="index5.html" class="filter" data-filter="compact">Resort Plan</a>
-          <a href="index6.html" class="filter" data-filter="compact">Educational Plan</a>
+          <a href="index3.html" class="filter" data-filter="modern">Residential Buliding Plan & 3D</a>
+          <a href="index4.html" class="filter" data-filter="farmhouse">Commercial Buliding Plan & 3D</a>
+          <a href="index5.html" class="filter" data-filter="compact">Resort Buliding Plan & 3D</a>
+          <a href="index6.html" class="filter" data-filter="compact">Educational Buliding Plan & 3D</a>
+          <a href="index13.html" class="filter" data-filter="compact">Constraction Buliding Projects</a>
         </div>
 
         <div class="grid" id="plansGrid">
-          <article class="card" data-type="modern">
-            <div class="card-media">
-              <img src="img/img1.jpg" alt="Consultancy Plan">
-              <div class="card-badge">3200 sq ft</div>
-            </div>
-            <div class="card-body">
-              <h3>Consultancy Plan</h3>
-              <p>Open-plan living, double-height foyer, integrated terrace and pool-ready layout.</p>
-              <a class="card-more" href="index1.html">View</a>
-            </div>
-          </article>
-
-          <article class="card" data-type="farmhouse">
-            <div class="card-media">
-              <img src="img/img2.jpg" alt="Costraction Plan">
-              <div class="card-badge">2100 sq ft</div>
-            </div>
-            <div class="card-body">
-              <h3>Construction Plan</h3>
-              <p>Cozy family layout with broad verandas and warm, rustic finishes.</p>
-              <a class="card-more" href="index2.html">View</a>
-            </div>
-          </article>
-
           <article class="card" data-type="compact">
             <div class="card-media">
               <img src="img/img3.jpg" alt="Residential Plan">
               <div class="card-badge">1200 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Residential Plan</h3>
+              <h3>Residential Buliding Plan & 3D</h3>
               <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
               <a class="card-more" href="index3.html">View</a>
             </div>
           </article>
 
-          <article class="card" data-type="modern">S
+          <article class="card" data-type="modern">
             <div class="card-media">
               <img src="img/img4.jpg" alt="ommercial Plan">
               <div class="card-badge">4500 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Commercial Plan</h3>
+              <h3>Commercial Buliding Plan & 3D</h3>
               <p>Luxurious multi-level villa with rooftop terrace and panoramic glazing.</p>
               <a class="card-more" href="index4.html">View</a>
             </div>
@@ -121,9 +126,9 @@
               <div class="card-badge">1200 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Resort Plan</h3>
+              <h3>Resort Buliding Plan & 3D</h3>
               <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
-              <a class="card-more" href="index3.html">View</a>
+              <a class="card-more" href="index5.html">View</a>
             </div>
           </article>
 
@@ -133,14 +138,31 @@
               <div class="card-badge">4500 sq ft</div>
             </div>
             <div class="card-body">
-              <h3>Educational Plan</h3>
+              <h3>Educational Buliding Plan & 3D</h3>
               <p>Luxurious multi-level villa with rooftop terrace and panoramic glazing.</p>
-              <a class="card-more" href="index4.html">View</a>
+              <a class="card-more" href="index6.html">View</a>
             </div>
           </article>
+
+          <article class="card" data-type="compact">
+            <div class="card-media">
+              <img src="img/img3.jpg" alt="Resort Plan">
+              <div class="card-badge">1200 sq ft</div>
+            </div>
+            <div class="card-body">
+              <h3>Constraction Buliding Projects</h3>
+              <p>Smart compact design for city plots — high utility, natural light, modern finishes.</p>
+              <a class="card-more" href="index13.html">View</a>
+            </div>
+          </article>
+
         </div>
       </div>
     </section>
+
+    
+
+  
 
     <!-- ABOUT -->
     <section id="about" class="section about-section">
@@ -165,7 +187,7 @@
             <div><strong>Email</strong><br><a href="mailto:gravitycon04@gmail.com">gravitycon04@gmail.com</a></div>
             <div><strong>Phone</strong><br><a href="tel:+919932253566">+91 9932253566</a></div>
           </div>
-          <a class="btn btn-primary" href="https://wa.me/911234567890" target="_blank" rel="noopener">Chat on WhatsApp</a>
+          <a class="btn btn-primary" href="https://wa.me/919932253566" target="_blank" rel="noopener">Chat on WhatsApp</a>
         </div>
 
         <form id="contactForm" class="contact-form" action="https://script.google.com/macros/s/AKfycby4qzxX0TlBjWBuYj6vlyHGWTVlHjnDVXoJZI55VEMiCbqAAIOMGR_y4uRTsx_WzBs/exec" method="POST" novalidate>
@@ -203,12 +225,13 @@
         <div class="footer-services">
           <h3>Our Services</h3>
           <ul>
-            <li>Construction</li>
             <li>Building Planning</li>
-            <li>Interior & Exterior</li>
-            <li>Land Survey</li>
-            <li>Estimates</li>
-            <li>Land Registration & Conversion</li>
+            <li>3D Perspective Views(Interior & Exterior)</li>
+            <li>Project Estimates</li>
+            <li>Structural Drawing</li>
+            <li>Soil Test</li>
+            <li>Site Supervision</li>
+            <li>Construction</li>
           </ul>   
         </div>
 
@@ -218,8 +241,7 @@
           <p><strong>Address:</strong><br>Makarampur, Bolpur, West Bengal 731204, India</p>
           <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="www.youtube.com"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-google"></i></a>
           </div>
         </div>
